# rustSC

./: Cargo.toml  README.md
src/: base.rs  core.rs  e_map.rs  game.rs  main.rs  map.rs  pathfinding.rs  robot.rs  robot_type.rs  terrain.rs  utils.rs
src/core/: base.rs  game.rs  robot.rs
src/utils/: map.rs  pathfinding.rs  robot_type.rs  terrain.rs
